# simple-semantic-search

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
experiments/: generate_semantic_sim_graph.py  pathfinding_vs_semantic_sim.py  semantic_sim_graph.ipynb
experiments/knowledge_graph/: generate.py
experiments/path_generation/: README.md  embedding_sim_distr.ipynb  path_generation.py
experiments/stored_embeddings/: README.md  emb_sim_reduction.py  word_vs_sentence_embeddings.py
generate/: bulk_word_crawler.py  word_crawler.py
labels/: ecommerce.json  government_search.json  news_articles.json  news_topics.json  youtube.json  youtube_videos.json
src/: aio_benchmark.py  benchmark.py  benchmark_bm25.py  benchmark_graph_search.py  benchmark_hardcoded_sim.py  benchmark_jaccard_sim.py  benchmark_knowledge_graph.py  benchmark_sentence_transformers.py  eval_summary.py  main.py  parameter_search.py
src/evaluation/: evals.py  metrics.py
src/graphs/: top5.py
src/preprocessing/: lemmatizer.py  numbers.py  preprocess.py  simple.py  stemming.py  stopwords.py
src/similarity/: base.py  bm25.py  ensemble.py  graph_traversal.py  jaccard.py  knowledge_graph.py  sentence_transformers.py
tests/: test_reciprocal_rank.py
