[tool.poetry]
name = "simple-semantic-search"
version = "0.1.0"
description = ""
authors = ["Nathan <11278700+nathansnellaert@users.noreply.github.com>"]
readme = "README.md"
packages = [
    { include = "lib", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.11"

[tool.poetry.group.dev.dependencies]
openai = "^1.35.12"
tenacity = "^8.5.0"
python-dotenv = "^1.0.1"
tqdm = "^4.66.4"
sentence-transformers = "^3.0.1"
ipykernel = "^6.29.5"
pandas = "^2.2.2"
matplotlib = "^3.9.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
